<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mitgliederliste Aeroclub Hamburg e.V. V1.5</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <item name="databaseVersion" format="integer" type="string">1</item>

    <string name="spinner_prompt">Choose an item</string>
    <string name="simple_header">Simple Spinner</string>
    <string name="custom_list_header">Mitglied aus der Liste auswählen</string>
    <string name="selection_header">Selection Spinner</string>

    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="cities_array">
        <item>Berlin</item>
        <item>Helsinki</item>
        <item>London</item>
        <item>New York</item>
        <item>Paris</item>
        <item>Stockholm</item>
    </string-array>

    <string name="version">Version</string>
    <string name="search">Suche / Filter</string>
    <string name="app_label">Mitgliederliste</string>
    <string name="search_hint">Nachname</string>
    <string name="youth">Jugendliche</string>
    <string name="stats">Statistik</string>
    <string name="structure">Altersstruktur</string>
    <string name="title_activity_edit_prefs">Voreinestellungen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_member">EditMember</string>
    <string name="verband">Verband</string>
    <string name="status">Status</string>
    <string name="anrede">Anrede</string>
    <string name="versicherung">Versicherung</string>
    <string name="title_activity_splash">Splash</string>

</resources>