<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/childs"
        android:title="@string/youth">
    </item>
    <item
        android:id="@+id/version"
        android:title="@string/version">
    </item>
    <item
        android:id="@+id/stats"
        android:title="@string/stats">
    </item>
    <item
        android:id="@+id/structure"
        android:title="@string/structure">
    </item>
    <item
        android:id="@+id/enhanced"
        android:title="Aktiviere Optionen"
        android:visible="true">
    </item>
    <item
        android:id="@+id/add_member"
        android:title="Neues Mitglied"
        android:visible="false">
    </item>
    <item
        android:id="@+id/exportDB"
        android:title="Export Datenbank"
        android:visible="false">
    </item>
    <item
        android:id="@+id/exportExcel"
        android:title="Excelexport"
        android:visible="false">
    </item>
    <item
        android:id="@+id/createiban"
        android:title="Generiere IBAN"
        android:visible="false">
    </item>
    <item
        android:id="@+id/makedtaus"
        android:title="SEPA 1.Halbjahr"
        android:visible="false">
    </item>
    <item
        android:id="@+id/makedtaus2"
        android:title="SEPA 2.Halbjahr" android:visible="false">
    </item>
    <item
        android:id="@+id/editOpt"
        android:title="Einstellungen"
        android:visible="false">
    </item>
     <item
        android:id="@+id/emailList"
        android:title="Emailliste"
        android:visible="false">
    </item>
    <item
        android:id="@+id/addressList"
        android:title="Adressenliste"
        android:visible="false">
    </item>
    <item
        android:id="@+id/resetwork"
        android:title="Platzarbeit zurücksetzen" android:visible="false">
    </item>
    <item
        android:id="@+id/resetyear"
        android:title="Jahr abschliessen" android:visible="false">
    </item>
    <item android:id="@+id/importDB" android:title="Importiere Datensätze" android:visible="false"></item>
	  <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:title="Hilfe">
    </item>
    <item
        android:id="@+id/executeSQL"
        android:title="SQL ausführen" android:visible="false">
    </item>
        <item
        android:id="@+id/restoreDB"
        android:title="Restore DB" android:visible="false">
    </item>
      <item
        android:id="@+id/old"
        android:title="show 'ausgetreten'" android:visible="false">
    </item>
      <item android:id="@+id/resetAbbuchung" android:title="Abbuchung zurücksetzen" android:visible="false"></item>
      <item android:id="@+id/setAbbuchung" android:title="Set alle abbuchen" android:visible="false"></item>
      <item android:id="@+id/OnlineUpdate" android:title="Online Update"></item>
      <item android:id="@+id/OnlineUpload" android:title="Online Upload" android:visible="false"></item>
      <item android:id="@+id/exportHistory" android:title="Export History" android:visible="false"></item>
  
</menu>